tdf#103186, make LOGINV ODFF1.2 compliant.

(Also retain Excel-interoperability and backward compatibility with Calc.)

Change-Id: Ibbe7224eabfb776cf6e7ecfeabae6d188178f4ed
Reviewed-on: https://gerrit.libreoffice.org/29885
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>